--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'mysql:mysql-connector-java' 
+    implementation 'com.mysql:mysql-connector-j' // actively maintained
+    
 
     
 }
