--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Blogs
 server.port=9090
 
 spring.datasource.url=jdbc:mysql://localhost:3306/blogs_db
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA and Hibernate Configuration
