--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,13 @@ dependencies {
 	
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.mysql:mysql-connector-j' // actively maintained
+	
+	
+	
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+	
 }
 
 tasks.named('test') {
